-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 15
-
Component/s: hotspot
-
b25
-
b26
runtime/logging/TestMethodHandlesVerbose.java crashes with
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:\\workspace\\open\\src\\hotspot\\cpu\\x86\\frame_x86.inline.hpp:49), pid=16644, tid=9372
# assert(pc != 0LL) failed: no pc?
when running in Graal as JIT mode on Windows.
This is new test introduced in b25.
To reproduce the failure run the test with
"-ea -esa -server -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:+UseJVMCICompiler -Djvmci.Compiler=graal -XX:+TieredCompilation"
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:\\workspace\\open\\src\\hotspot\\cpu\\x86\\frame_x86.inline.hpp:49), pid=16644, tid=9372
# assert(pc != 0LL) failed: no pc?
when running in Graal as JIT mode on Windows.
This is new test introduced in b25.
To reproduce the failure run the test with
"-ea -esa -server -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:+UseJVMCICompiler -Djvmci.Compiler=graal -XX:+TieredCompilation"
- blocks
-
JDK-8245107 Use Unified Logging in trace_method_handle_stub()
-
- Resolved
-
- relates to
-
JDK-8256822 runtime/logging/RedefineClasses.java fails with "Error: VM option 'Verbose' is develop and is available only in debug version of VM."
-
- Resolved
-
-
JDK-8256843 [PPC64] runtime/logging/RedefineClasses.java fails with assert: registers not saved on stack
-
- Resolved
-