8246378: [Windows] assert on MethodHandle logging code