src/hotspot/cpu/x86/methodHandles_x86.cpp
@@ -528,6 +528,12 @@ void trace_method_handle_stub(const char* adaptername,
     }
     tty->cr();
 
+    // Note: We want to allow trace_method_handle from any call site.
+    // While trace_method_handle creates a frame, it may be entered
+    // without a PC on the stack top (e.g. not just after a call).
+    // Walking that frame could lead to failures due to that invalid PC.
+    // => carefully detect that frame when doing the stack walking
+
     {
       // dumping last frame with frame::describe
 
@@ -536,30 +542,25 @@ void trace_method_handle_stub(const char* adaptername,
       PRESERVE_EXCEPTION_MARK; // may not be needed but safer and inexpensive here
       FrameValues values;
 
-      // Note: We want to allow trace_method_handle from any call site.
-      // While trace_method_handle creates a frame, it may be entered
-      // without a PC on the stack top (e.g. not just after a call).
-      // Walking that frame could lead to failures due to that invalid PC.
-      // => carefully detect that frame when doing the stack walking
-
       // Current C frame
       frame cur_frame = os::current_frame();
 
-      // Robust search of trace_calling_frame (independant of inlining).
-      // Assumes saved_regs comes from a pusha in the trace_calling_frame.
-      assert(cur_frame.sp() < saved_regs, "registers not saved on stack ?");
-      frame trace_calling_frame = os::get_sender_for_C_frame(&cur_frame);
-      while (trace_calling_frame.fp() < saved_regs) {
-        trace_calling_frame = os::get_sender_for_C_frame(&trace_calling_frame);
-      }
-
-      // safely create a frame and call frame::describe
-      intptr_t *dump_sp = trace_calling_frame.sender_sp();
-      intptr_t *dump_fp = trace_calling_frame.link();
-
-      bool walkable = has_mh; // whether the traced frame shoud be walkable
+      bool walkable = has_mh && cur_frame.fp() != 0; // whether the traced frame should be walkable
 
       if (walkable) {
+
+        // Robust search of trace_calling_frame (independant of inlining).
+        // Assumes saved_regs comes from a pusha in the trace_calling_frame.
+        assert(cur_frame.sp() < saved_regs, "registers not saved on stack ?");
+        frame trace_calling_frame = os::get_sender_for_C_frame(&cur_frame);
+        while (trace_calling_frame.fp() < saved_regs) {
+          trace_calling_frame = os::get_sender_for_C_frame(&trace_calling_frame);
+        }
+
+        // safely create a frame and call frame::describe
+        intptr_t *dump_sp = trace_calling_frame.sender_sp();
+        intptr_t *dump_fp = trace_calling_frame.link();
+
         // The previous definition of walkable may have to be refined
         // if new call sites cause the next frame constructor to start
         // failing. Alternatively, frame constructors could be
@@ -568,11 +569,6 @@ void trace_method_handle_stub(const char* adaptername,
         // part of this RFE, which will instead use a simpler output).
         frame dump_frame = frame(dump_sp, dump_fp);
         dump_frame.describe(values, 1);
-      } else {
-        // Stack may not be walkable (invalid PC above FP):
-        // Add descriptions without building a Java frame to avoid issues
-        values.describe(-1, dump_fp, "fp for #1 <not parsed, cannot trust pc>");
-        values.describe(-1, dump_sp, "sp for #1");
       }
       values.describe(-1, entry_sp, "raw top of stack");
 
